Update and rename for doctor.html to index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 مجالات القبالة، أمراض النساء والتوليد، رعاية صحة الأم والطفل،
                 والمبادرات الصحية العامة.
               </p>
-              <a href="#" class="cta-button">تحميل السيرة الذاتية</a>
+              <a href="resume.zip" class="cta-button">تحميل السيرة الذاتية</a>
             </div>
           </div>
         </div>
